[gd_scene load_steps=13 format=3 uid="uid://bkprux57l4d4x"]

[ext_resource type="Script" uid="uid://bqpxedsjefa5e" path="res://Interactables/Dungeon/Scripts/locked_door.gd" id="1_1asp0"]
[ext_resource type="Texture2D" uid="uid://w46u6707a7vi" path="res://Interactables/Dungeon/dungeon_props.png" id="2_jr3ag"]
[ext_resource type="Resource" uid="uid://bvuuod0bvf5xp" path="res://Items/key_dungeon.tres" id="2_t2pn1"]
[ext_resource type="PackedScene" uid="uid://687if1id12et" path="res://GeneralNodes/PersistentDataHandler/persistent_data_handler.tscn" id="3_ltqhf"]
[ext_resource type="AudioStream" uid="uid://b8kdcif1i8cp4" path="res://Interactables/Dungeon/locked_door.wav" id="3_qmaor"]
[ext_resource type="AudioStream" uid="uid://61swn480lxqy" path="res://Interactables/Dungeon/unlock_door.wav" id="4_35oq3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jr3ag"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_35oq3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qmaor"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_arxdi"]
resource_name = "opened"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_35oq3"]
_data = {
&"RESET": SubResource("Animation_35oq3"),
&"closed": SubResource("Animation_qmaor"),
&"opened": SubResource("Animation_arxdi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltqhf"]
size = Vector2(33, 20)

[node name="LockedDoor" type="Node2D"]
process_mode = 3
script = ExtResource("1_1asp0")
key_item = ExtResource("2_t2pn1")
locked_audio = ExtResource("3_qmaor")
open_audio = ExtResource("4_35oq3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(32, -39)
texture = ExtResource("2_jr3ag")
hframes = 7

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(32, -27)
shape = SubResource("RectangleShape2D_jr3ag")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AudioStreamPlayer2D")
libraries = {
&"": SubResource("AnimationLibrary_35oq3")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="PersistentDataHandler" parent="." instance=ExtResource("3_ltqhf")]

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(32.5, -6)
shape = SubResource("RectangleShape2D_ltqhf")
debug_color = Color(0, 0.70196074, 0.16751043, 0.41960785)
